# codon-recoder

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
src/codon_recode/: __init__.py  cli.py  recoder.py  tables.py
tests/: test_recoder.py
